generator basic feature
